idf_component_register(
    SRCS 
        "main.cpp"
        "buttonMain.cpp"
        "crsfMain.cpp"
        "imuMain.cpp"
        "pidMain.cpp"
        "servoMain.cpp"
        "SRXL2Main.cpp"
        "telemtryMain.cpp"
        "zBusMain.cpp"
        "rpm_hardwareMain.cpp"
        "rpm_interruptMain.cpp"
       
    INCLUDE_DIRS
        "."
)